<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/step_video"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        />

    <RelativeLayout
        android:id="@+id/layout_no_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:visibility="gone">

        <ImageView
            android:id="@+id/no_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ph"
            android:padding="1dp"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/step_desc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:padding="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="@color/blueColor"
        >
        <TextView
            android:id="@+id/previous_step"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Back"
            android:gravity="center"
            android:background="@color/blueColor"
            android:clickable="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_marginRight="1dp"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/next_step"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Next"
            android:gravity="center"
            android:background="@color/blueColor"
            android:clickable="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:visibility="visible" />


    </LinearLayout>


</LinearLayout>