<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ingred"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ahmed.mybakingapp.Activity.IngredActivity">


    <RelativeLayout
        android:id="@+id/ingred_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        >

        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ingredient_txt"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:textColor="@android:color/white"
            />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingred_Recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>
